Fix z-index

--- a/src/components/Player/css/Player.module.css
+++ b/src/components/Player/css/Player.module.css
@@ -4,7 +4,7 @@
   bottom: 0;
   background: var(--light);
   box-shadow: 0 0 2px var(--dark);
-  z-index: 10;
+  z-index: 1;
 }
 
 .container {
